[package]
name = "skywriter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.20"
reqwest = { version = "0.11.11", features = ["blocking"] }
data-encoding = "2.3.2"
